--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
 </head>
 <body>
   <h1>Hello! Site is live 🎉</h1>
-  <p>This is a test page on GitHub Pages.</p>
+  <p>This is a test page on GitHub Pages. tes</p>
   <p><a href="about.html">Go to About</a></p>
 </body>
 </html>
+
