--- a/index.html
+++ b/index.html
@@ -1,13 +1,50 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <meta charset="utf-8">
-  <title>My Portfolio</title>
+  <meta charset="UTF-8" />
+  <title>Your Name - Portfolio</title>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      max-width: 800px;
+      margin: auto;
+      padding: 40px;
+      background: #f6f6f6;
+    }
+    h1 { color: #333; }
+    .section {
+      background: white;
+      padding: 20px;
+      margin-bottom: 20px;
+      border-radius: 8px;
+      box-shadow: 0 0 5px rgba(0,0,0,0.1);
+    }
+    a { color: blue; }
+  </style>
 </head>
 <body>
-  <h1>Hello! Site is live 🎉</h1>
-  <p>This is a test page on GitHub Pages. tes</p>
-  <p><a href="about.html">Go to About</a></p>
+
+  <h1>Your Name</h1>
+  <p>Web Developer | Designer | Student</p>
+
+  <div class="section">
+    <h2>About Me</h2>
+    <p>I am a web developer interested in building clean and simple user interfaces.</p>
+  </div>
+
+  <div class="section">
+    <h2>Projects</h2>
+    <ul>
+      <li>Project 1 – <a href="#">View</a></li>
+      <li>Project 2 – <a href="#">View</a></li>
+    </ul>
+  </div>
+
+  <div class="section">
+    <h2>Contact</h2>
+    <p>Email: you@example.com</p>
+  </div>
+
 </body>
 </html>
 
