--- a/index.html
+++ b/index.html
@@ -1,50 +1,291 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <title>Your Name - Portfolio</title>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>Your Name – Portfolio</title>
+  <meta name="description" content="Personal portfolio of Your Name – projects, skills, experience, and contact." />
+  <meta property="og:title" content="Your Name – Portfolio" />
+  <meta property="og:description" content="Projects, skills, experience, and contact." />
+  <meta property="og:type" content="website" />
+  <meta name="theme-color" content="#0ea5e9" />
   <style>
-    body {
-      font-family: Arial, sans-serif;
-      max-width: 800px;
-      margin: auto;
-      padding: 40px;
-      background: #f6f6f6;
+    :root{
+      --bg: #0b1020;
+      --panel: #0f172a;
+      --text: #e5e7eb;
+      --muted: #9ca3af;
+      --brand: #0ea5e9; /* sky-500 */
+      --brand-2: #22d3ee; /* cyan-400 */
+      --ring: rgba(14,165,233,.4);
     }
-    h1 { color: #333; }
-    .section {
-      background: white;
-      padding: 20px;
-      margin-bottom: 20px;
-      border-radius: 8px;
-      box-shadow: 0 0 5px rgba(0,0,0,0.1);
+    *{box-sizing:border-box}
+    html,body{margin:0;padding:0;background:radial-gradient(1200px 600px at 80% -10%,rgba(34,211,238,.08),transparent 60%),radial-gradient(800px 400px at -10% 20%,rgba(14,165,233,.12),transparent 60%),var(--bg);color:var(--text);font:16px/1.6 system-ui,-apple-system,Segoe UI,Roboto,Ubuntu,Cantarell,Noto Sans,"Helvetica Neue",Arial}
+    a{color:var(--brand);text-decoration:none}
+    a:hover{text-decoration:underline}
+    img{max-width:100%;display:block}
+    .container{max-width:1100px;margin:0 auto;padding:24px}
+    header{position:sticky;top:0;backdrop-filter:blur(8px);background:linear-gradient(180deg,rgba(11,16,32,.8),rgba(11,16,32,.55));border-bottom:1px solid rgba(255,255,255,.08);z-index:10}
+    .nav{display:flex;align-items:center;justify-content:space-between;gap:12px}
+    .brand{display:flex;align-items:center;gap:12px}
+    .brand .dot{width:12px;height:12px;border-radius:50%;background:linear-gradient(135deg,var(--brand),var(--brand-2));box-shadow:0 0 20px var(--brand)}
+    .brand h1{font-size:18px;margin:0;font-weight:600}
+    nav ul{display:flex;gap:18px;list-style:none;margin:0;padding:0}
+    nav a{color:var(--text);opacity:.9}
+    nav a.active, nav a:focus{color:white}
+
+    .hero{display:grid;grid-template-columns:1.2fr .8fr;gap:32px;align-items:center;padding:64px 0}
+    .tag{display:inline-flex;gap:8px;align-items:center;font-size:12px;color:var(--muted);border:1px solid rgba(255,255,255,.1);padding:6px 10px;border-radius:999px}
+    .title{font-size:44px;line-height:1.15;margin:14px 0 8px}
+    .subtitle{color:var(--muted);margin:0 0 22px}
+    .cta{display:flex;gap:12px;flex-wrap:wrap}
+    .btn{display:inline-flex;align-items:center;gap:10px;background:linear-gradient(135deg,var(--brand),var(--brand-2));color:#001018;border:none;padding:12px 16px;border-radius:12px;font-weight:600;box-shadow:0 6px 20px rgba(34,211,238,.22);cursor:pointer}
+    .btn.secondary{background:transparent;color:var(--text);border:1px solid rgba(255,255,255,.14)}
+
+    .card{background:linear-gradient(180deg,rgba(255,255,255,.04),rgba(255,255,255,.02));border:1px solid rgba(255,255,255,.08);border-radius:16px;padding:18px}
+    .grid{display:grid;gap:18px}
+
+    .section{padding:26px 0 16px}
+    .section h2{font-size:22px;margin:4px 0 14px}
+    .skills{grid-template-columns:repeat(auto-fit,minmax(160px,1fr))}
+    .skill{display:flex;align-items:center;gap:10px;padding:12px;border-radius:12px;border:1px dashed rgba(255,255,255,.12)}
+
+    .projects{grid-template-columns:repeat(auto-fit,minmax(260px,1fr))}
+    .project img{border-radius:12px;border:1px solid rgba(255,255,255,.08)}
+    .project h3{margin:10px 0 6px;font-size:18px}
+    .project p{margin:0 0 10px;color:var(--muted)}
+    .project .meta{display:flex;gap:10px;flex-wrap:wrap}
+    .chip{font-size:12px;border:1px solid rgba(255,255,255,.14);padding:4px 8px;border-radius:999px;color:var(--muted)}
+
+    .timeline{position:relative}
+    .timeline::before{content:"";position:absolute;left:10px;top:0;bottom:0;width:2px;background:linear-gradient(var(--brand),transparent)}
+    .tl-item{position:relative;padding-left:34px;margin:0 0 16px}
+    .tl-item::before{content:"";position:absolute;left:4px;top:6px;width:12px;height:12px;border-radius:50%;background:linear-gradient(135deg,var(--brand),var(--brand-2));box-shadow:0 0 20px var(--brand)}
+    .tl-item h3{margin:0;font-size:16px}
+    .tl-item .when{font-size:12px;color:var(--muted)}
+
+    .contact{display:grid;grid-template-columns:1.2fr .8fr;gap:18px}
+    form .row{display:grid;grid-template-columns:1fr 1fr;gap:12px}
+    input,textarea{width:100%;padding:12px 14px;border-radius:12px;border:1px solid rgba(255,255,255,.14);background:rgba(255,255,255,.03);color:var(--text)}
+    textarea{min-height:120px}
+    input:focus,textarea:focus{outline:3px solid var(--ring);border-color:transparent}
+
+    footer{padding:28px 0;color:var(--muted);text-align:center}
+
+    .top{position:fixed;right:16px;bottom:16px;border-radius:50%;width:44px;height:44px;display:grid;place-items:center;background:linear-gradient(135deg,var(--brand),var(--brand-2));box-shadow:0 10px 25px rgba(14,165,233,.35);cursor:pointer}
+
+    @media (max-width: 900px){
+      .hero{grid-template-columns:1fr}
+      .contact{grid-template-columns:1fr}
+      form .row{grid-template-columns:1fr}
     }
-    a { color: blue; }
   </style>
 </head>
 <body>
+  <header>
+    <div class="container nav">
+      <div class="brand" aria-label="Home">
+        <span class="dot" aria-hidden="true"></span>
+        <h1>Your Name</h1>
+      </div>
+      <nav aria-label="Primary">
+        <ul>
+          <li><a href="#about">About</a></li>
+          <li><a href="#skills">Skills</a></li>
+          <li><a href="#projects">Projects</a></li>
+          <li><a href="#experience">Experience</a></li>
+          <li><a href="#contact">Contact</a></li>
+        </ul>
+      </nav>
+    </div>
+  </header>
 
-  <h1>Your Name</h1>
-  <p>Web Developer | Designer | Student</p>
+  <main class="container">
+    <!-- HERO -->
+    <section class="hero" id="home">
+      <div>
+        <span class="tag">👋 Hello, I’m <strong>Your Name</strong></span>
+        <h2 class="title">Building clean, fast, human‑friendly web experiences</h2>
+        <p class="subtitle">Frontend Developer • UI Engineer • Problem Solver. I turn ideas into delightful, accessible interfaces.</p>
+        <div class="cta">
+          <a class="btn" href="#projects">View Projects</a>
+          <a class="btn secondary" href="#contact">Contact Me</a>
+          <a class="btn secondary" href="resume.pdf" download>Download Résumé</a>
+        </div>
+      </div>
+      <div class="card" aria-label="Profile overview">
+        <!-- Replace src with your photo (square works best) -->
+        <img src="https://images.unsplash.com/photo-1527980965255-d3b416303d12?q=80&w=600&auto=format&fit=crop" alt="Profile photo" />
+        <div style="padding:10px 4px 0;color:var(--muted);font-size:14px">Available for freelance • Remote / Onsite</div>
+      </div>
+    </section>
 
-  <div class="section">
-    <h2>About Me</h2>
-    <p>I am a web developer interested in building clean and simple user interfaces.</p>
-  </div>
+    <!-- ABOUT -->
+    <section class="section" id="about">
+      <h2>About</h2>
+      <div class="card">
+        <p>I'm a developer who enjoys crafting performant user interfaces and bringing designs to life. I care about clarity, accessibility, and pixel‑perfect details. Recently, I’ve been focused on <strong>React</strong>, <strong>TypeScript</strong>, and <strong>performance tuning</strong>.</p>
+        <p>When I’m not coding, you’ll find me exploring design systems, writing technical tutorials, or brewing specialty coffee.</p>
+      </div>
+    </section>
 
-  <div class="section">
-    <h2>Projects</h2>
-    <ul>
-      <li>Project 1 – <a href="#">View</a></li>
-      <li>Project 2 – <a href="#">View</a></li>
-    </ul>
-  </div>
+    <!-- SKILLS -->
+    <section class="section" id="skills">
+      <h2>Skills</h2>
+      <div class="grid skills">
+        <div class="skill">⚛️ React / Next.js</div>
+        <div class="skill">🧪 TypeScript / JS</div>
+        <div class="skill">🎨 CSS / Tailwind</div>
+        <div class="skill">🗄️ Node / Express</div>
+        <div class="skill">☁️ AWS / Vercel / Netlify</div>
+        <div class="skill">📈 Lighthouse / Web Vitals</div>
+      </div>
+    </section>
 
-  <div class="section">
-    <h2>Contact</h2>
-    <p>Email: you@example.com</p>
-  </div>
+    <!-- PROJECTS -->
+    <section class="section" id="projects">
+      <h2>Projects</h2>
+      <div class="grid projects">
+        <article class="card project">
+          <img src="https://images.unsplash.com/photo-1556157382-97eda2d62296?q=80&w=1200&auto=format&fit=crop" alt="Project screenshot"/>
+          <h3>Project One</h3>
+          <p>Landing page with responsive layout and accessible components.</p>
+          <div class="meta">
+            <span class="chip">HTML</span><span class="chip">CSS</span><span class="chip">JS</span>
+          </div>
+          <p>
+            <a href="#" aria-label="Live demo for Project One">Live</a> ·
+            <a href="#" aria-label="Code repository for Project One">Code</a>
+          </p>
+        </article>
+        <article class="card project">
+          <img src="https://images.unsplash.com/photo-1483058712412-4245e9b90334?q=80&w=1200&auto=format&fit=crop" alt="Project screenshot"/>
+          <h3>Project Two</h3>
+          <p>Dashboard application with charts and dark mode support.</p>
+          <div class="meta">
+            <span class="chip">React</span><span class="chip">TypeScript</span><span class="chip">API</span>
+          </div>
+          <p>
+            <a href="#">Live</a> · <a href="#">Code</a>
+          </p>
+        </article>
+        <article class="card project">
+          <img src="https://images.unsplash.com/photo-1498050108023-c5249f4df085?q=80&w=1200&auto=format&fit=crop" alt="Project screenshot"/>
+          <h3>Project Three</h3>
+          <p>Micro‑site generator with SEO‑friendly routing.</p>
+          <div class="meta">
+            <span class="chip">Next.js</span><span class="chip">SEO</span><span class="chip">SSR</span>
+          </div>
+          <p>
+            <a href="#">Live</a> · <a href="#">Code</a>
+          </p>
+        </article>
+      </div>
+    </section>
 
+    <!-- EXPERIENCE -->
+    <section class="section" id="experience">
+      <h2>Experience</h2>
+      <div class="card timeline">
+        <div class="tl-item">
+          <h3>Senior Frontend Engineer · Acme Corp</h3>
+          <div class="when">2023 — Present · Remote</div>
+          <p>Led the design system migration, improved core web vitals by 28%, and mentored 4 engineers.</p>
+        </div>
+        <div class="tl-item">
+          <h3>Frontend Developer · Pixel Labs</h3>
+          <div class="when">2021 — 2023 · Bengaluru</div>
+          <p>Built a marketing site generator powering 50+ product pages with MDX and Next.js.</p>
+        </div>
+      </div>
+    </section>
+
+    <!-- CONTACT -->
+    <section class="section" id="contact">
+      <h2>Contact</h2>
+      <div class="contact">
+        <form class="card" onsubmit="return sendMail(event)">
+          <div class="row">
+            <label>
+              <span>Name</span>
+              <input required name="name" placeholder="Your name" />
+            </label>
+            <label>
+              <span>Email</span>
+              <input required type="email" name="email" placeholder="you@example.com" />
+            </label>
+          </div>
+          <label>
+            <span>Message</span>
+            <textarea required name="message" placeholder="Tell me about your project…"></textarea>
+          </label>
+          <button class="btn" type="submit">Send Message</button>
+          <p id="formStatus" style="margin:8px 0 0;color:var(--muted)"></p>
+          <p style="margin:8px 0 0;color:var(--muted);font-size:12px">This demo form uses <code>mailto:</code> for static hosting. Replace with a service like Formspree/Netlify Forms for production.</p>
+        </form>
+        <div class="card">
+          <p><strong>Email:</strong> <a href="mailto:you@example.com">you@example.com</a></p>
+          <p><strong>Location:</strong> Bengaluru, India</p>
+          <p><strong>Social:</strong> <a href="#">LinkedIn</a> · <a href="#">GitHub</a> · <a href="#">Twitter</a></p>
+        </div>
+      </div>
+    </section>
+  </main>
+
+  <footer>
+    <div class="container">© <span id="year"></span> Your Name. All rights reserved.</div>
+  </footer>
+
+  <a class="top" href="#home" aria-label="Back to top">▲</a>
+
+  <script>
+    // Active nav link on scroll
+    const sections = document.querySelectorAll('main section');
+    const navLinks = document.querySelectorAll('nav a');
+    const setActive = () => {
+      let cur = null;
+      sections.forEach(s => {
+        const r = s.getBoundingClientRect();
+        if(r.top < innerHeight*0.33 && r.bottom > innerHeight*0.33) cur = s.id;
+      });
+      navLinks.forEach(a => a.classList.toggle('active', a.getAttribute('href') === '#'+cur));
+    };
+    document.addEventListener('scroll', setActive); setActive();
+
+    // Year
+    document.getElementById('year').textContent = new Date().getFullYear();
+
+    // Smooth scroll (for older browsers)
+    document.querySelectorAll('a[href^="#"]').forEach(a=>a.addEventListener('click', e=>{
+      const id = a.getAttribute('href').slice(1);
+      const el = document.getElementById(id);
+      if(el){ e.preventDefault(); el.scrollIntoView({behavior:'smooth', block:'start'}); }
+    }));
+
+    // Demo mailto handler for completely static hosting
+    function sendMail(e){
+      e.preventDefault();
+      const data = new FormData(e.target);
+      const body = encodeURIComponent(`${data.get('message')}` + `\n\n— ${data.get('name')} (${data.get('email')})`);
+      const subject = encodeURIComponent('Portfolio contact');
+      const mail = `mailto:you@example.com?subject=${subject}&body=${body}`;
+      document.getElementById('formStatus').textContent = 'Opening your email client…';
+      window.location.href = mail;
+      return false;
+    }
+  </script>
+
+  <!--
+  HOW TO CUSTOMIZE
+  1) Replace "Your Name" in the header, footer, and hero.
+  2) Swap project screenshots (unsplash links are placeholders).
+  3) Update skills, experience, and social links.
+  4) Put your resume as resume.pdf beside this file (or change the link).
+  5) For a production contact form on static hosting, consider:
+     - Formspree (free tier) → action URL + method="POST"
+     - Netlify Forms (requires hosting on Netlify)
+     - Google Forms (embed link/button)
+  6) Deploy easily: GitHub Pages, Netlify Drop, or Vercel.
+  -->
 </body>
 </html>
-
