--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Your Name – Portfolio</title>
+  <title>Bachili Kallappa N – Portfolio</title>
   <meta name="description" content="Personal portfolio of Your Name – projects, skills, experience, and contact." />
-  <meta property="og:title" content="Your Name – Portfolio" />
+  <meta property="og:title" content="Bachili Kallappa – Portfolio" />
   <meta property="og:description" content="Projects, skills, experience, and contact." />
   <meta property="og:type" content="website" />
   <meta name="theme-color" content="#0ea5e9" />
@@ -15,8 +15,8 @@
       --panel: #0f172a;
       --text: #e5e7eb;
       --muted: #9ca3af;
-      --brand: #0ea5e9; /* sky-500 */
-      --brand-2: #22d3ee; /* cyan-400 */
+      --brand: #0ea5e9;
+      --brand-2: #22d3ee;
       --ring: rgba(14,165,233,.4);
     }
     *{box-sizing:border-box}
@@ -86,7 +86,7 @@
     <div class="container nav">
       <div class="brand" aria-label="Home">
         <span class="dot" aria-hidden="true"></span>
-        <h1>Your Name</h1>
+        <h1>Bachili Kallappa</h1>
       </div>
       <nav aria-label="Primary">
         <ul>
@@ -104,8 +104,8 @@
     <!-- HERO -->
     <section class="hero" id="home">
       <div>
-        <span class="tag">👋 Hello, I’m <strong>Your Name</strong></span>
-        <h2 class="title">Building clean, fast, human‑friendly web experiences</h2>
+        <span class="tag">👋 Hello, I’m <strong>Bachili Kallappa</strong></span>
+        <h2 class="title">Building clean, fast, human-friendly web experiences</h2>
         <p class="subtitle">Frontend Developer • UI Engineer • Problem Solver. I turn ideas into delightful, accessible interfaces.</p>
         <div class="cta">
           <a class="btn" href="#projects">View Projects</a>
@@ -114,7 +114,6 @@
         </div>
       </div>
       <div class="card" aria-label="Profile overview">
-        <!-- Replace src with your photo (square works best) -->
         <img src="https://images.unsplash.com/photo-1527980965255-d3b416303d12?q=80&w=600&auto=format&fit=crop" alt="Profile photo" />
         <div style="padding:10px 4px 0;color:var(--muted);font-size:14px">Available for freelance • Remote / Onsite</div>
       </div>
@@ -124,7 +123,7 @@
     <section class="section" id="about">
       <h2>About</h2>
       <div class="card">
-        <p>I'm a developer who enjoys crafting performant user interfaces and bringing designs to life. I care about clarity, accessibility, and pixel‑perfect details. Recently, I’ve been focused on <strong>React</strong>, <strong>TypeScript</strong>, and <strong>performance tuning</strong>.</p>
+        <p>I’m a developer who enjoys crafting performant user interfaces and bringing designs to life. I care about clarity, accessibility, and pixel-perfect details. Recently, I’ve been focused on <strong>React</strong>, <strong>TypeScript</strong>, and <strong>performance tuning</strong>.</p>
         <p>When I’m not coding, you’ll find me exploring design systems, writing technical tutorials, or brewing specialty coffee.</p>
       </div>
     </section>
@@ -154,10 +153,10 @@
             <span class="chip">HTML</span><span class="chip">CSS</span><span class="chip">JS</span>
           </div>
           <p>
-            <a href="#" aria-label="Live demo for Project One">Live</a> ·
-            <a href="#" aria-label="Code repository for Project One">Code</a>
+            <a href="#">Live</a> · <a href="#">Code</a>
           </p>
         </article>
+
         <article class="card project">
           <img src="https://images.unsplash.com/photo-1483058712412-4245e9b90334?q=80&w=1200&auto=format&fit=crop" alt="Project screenshot"/>
           <h3>Project Two</h3>
@@ -169,10 +168,11 @@
             <a href="#">Live</a> · <a href="#">Code</a>
           </p>
         </article>
+
         <article class="card project">
           <img src="https://images.unsplash.com/photo-1498050108023-c5249f4df085?q=80&w=1200&auto=format&fit=crop" alt="Project screenshot"/>
           <h3>Project Three</h3>
-          <p>Micro‑site generator with SEO‑friendly routing.</p>
+          <p>Micro-site generator with SEO-friendly routing.</p>
           <div class="meta">
             <span class="chip">Next.js</span><span class="chip">SEO</span><span class="chip">SSR</span>
           </div>
@@ -204,7 +204,7 @@
     <section class="section" id="contact">
       <h2>Contact</h2>
       <div class="contact">
-        <form class="card" onsubmit="return sendMail(event)">
+        <form class="card" action="https://formspree.io/f/xldopvda" method="POST">
           <div class="row">
             <label>
               <span>Name</span>
@@ -220,11 +220,13 @@
             <textarea required name="message" placeholder="Tell me about your project…"></textarea>
           </label>
           <button class="btn" type="submit">Send Message</button>
-          <p id="formStatus" style="margin:8px 0 0;color:var(--muted)"></p>
-          <p style="margin:8px 0 0;color:var(--muted);font-size:12px">This demo form uses <code>mailto:</code> for static hosting. Replace with a service like Formspree/Netlify Forms for production.</p>
+          <p style="margin:8px 0 0;color:var(--muted);font-size:12px">
+            Form powered by Formspree.
+          </p>
         </form>
+
         <div class="card">
-          <p><strong>Email:</strong> <a href="mailto:you@example.com">you@example.com</a></p>
+          <p><strong>Email:</strong> <a href="mailto:bachilikallappan@gmail.com">bachilikallappan@gmail.com</a></p>
           <p><strong>Location:</strong> Bengaluru, India</p>
           <p><strong>Social:</strong> <a href="#">LinkedIn</a> · <a href="#">GitHub</a> · <a href="#">Twitter</a></p>
         </div>
@@ -239,7 +241,6 @@
   <a class="top" href="#home" aria-label="Back to top">▲</a>
 
   <script>
-    // Active nav link on scroll
     const sections = document.querySelectorAll('main section');
     const navLinks = document.querySelectorAll('nav a');
     const setActive = () => {
@@ -252,40 +253,13 @@
     };
     document.addEventListener('scroll', setActive); setActive();
 
-    // Year
     document.getElementById('year').textContent = new Date().getFullYear();
 
-    // Smooth scroll (for older browsers)
     document.querySelectorAll('a[href^="#"]').forEach(a=>a.addEventListener('click', e=>{
       const id = a.getAttribute('href').slice(1);
       const el = document.getElementById(id);
       if(el){ e.preventDefault(); el.scrollIntoView({behavior:'smooth', block:'start'}); }
     }));
-
-    // Demo mailto handler for completely static hosting
-    function sendMail(e){
-      e.preventDefault();
-      const data = new FormData(e.target);
-      const body = encodeURIComponent(`${data.get('message')}` + `\n\n— ${data.get('name')} (${data.get('email')})`);
-      const subject = encodeURIComponent('Portfolio contact');
-      const mail = `mailto:you@example.com?subject=${subject}&body=${body}`;
-      document.getElementById('formStatus').textContent = 'Opening your email client…';
-      window.location.href = mail;
-      return false;
-    }
   </script>
-
-  <!--
-  HOW TO CUSTOMIZE
-  1) Replace "Your Name" in the header, footer, and hero.
-  2) Swap project screenshots (unsplash links are placeholders).
-  3) Update skills, experience, and social links.
-  4) Put your resume as resume.pdf beside this file (or change the link).
-  5) For a production contact form on static hosting, consider:
-     - Formspree (free tier) → action URL + method="POST"
-     - Netlify Forms (requires hosting on Netlify)
-     - Google Forms (embed link/button)
-  6) Deploy easily: GitHub Pages, Netlify Drop, or Vercel.
-  -->
 </body>
 </html>
