--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
         </div>
       </div>
       <div class="card" aria-label="Profile overview">
-        <img src="https://images.unsplash.com/photo-1527980965255-d3b416303d12?q=80&w=600&auto=format&fit=crop" alt="Profile photo" />
+        <img src="WhatsApp Image 2025-10-27 at 10.40.00 PM.jpeg" alt="Profile photo" />
         <div style="padding:10px 4px 0;color:var(--muted);font-size:14px">Available for freelance • Remote / Onsite</div>
       </div>
     </section>
@@ -263,3 +263,4 @@
   </script>
 </body>
 </html>
+
