--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
         <div class="cta">
           <a class="btn" href="#projects">View Projects</a>
           <a class="btn secondary" href="#contact">Contact Me</a>
-          <a class="btn secondary" href="resume.pdf" download>Download Résumé</a>
+          <a class="btn secondary" href="Bachili Kallappa N_2022_BE_ME.pdf" download>Download Résumé</a>
         </div>
       </div>
       <div class="card" aria-label="Profile overview">
@@ -263,4 +263,5 @@
   </script>
 </body>
 </html>
+
 
