--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
       </div>
       <div class="card" aria-label="Profile overview">
         <!-- Tip: rename file to avoid spaces, e.g., profile.jpg -->
-        <img src="profile.jpg" alt="Profile photo" />
+        <img src="WhatsApp Image 2025-10-27 at 10.40.00 PM.jpeg" alt="Profile photo" />
         <div style="padding:10px 4px 0;color:var(--muted);font-size:14px">Available for freelance • Remote / Onsite</div>
       </div>
     </section>
@@ -274,3 +274,4 @@
   </script>
 </body>
 </html>
+
