--- a/index.html
+++ b/index.html
@@ -128,7 +128,12 @@
         <div class="cta">
           <a class="btn" href="#projects">View Projects</a>
           <a class="btn secondary" href="#contact">Contact Me</a>
-          <a class="btn secondary" href="Bachili-Kallappa-N_2022_BE_ME.pdf" download>Download Résumé</a>
+          <a class="btn secondary"
+   href="Bachili%20Kallappa%20N_2022_BE_ME.pdf"
+   target="_blank" rel="noopener" download>
+  Download Résumé
+</a>
+
         </div>
       </div>
       <div class="card" aria-label="Profile overview">
@@ -274,4 +279,5 @@
   </script>
 </body>
 </html>
+
 
