--- a/index.html
+++ b/index.html
@@ -156,11 +156,11 @@
     <section class="section" id="skills">
       <h2>Skills</h2>
       <div class="grid skills">
+        <div class="skill">🗄️ Java / Python</div>
         <div class="skill">⚛️ React / Next.js</div>
         <div class="skill">🧪 TypeScript / JS</div>
-        <div class="skill">🎨 CSS / Tailwind</div>
-        <div class="skill">🗄️ Node / Express</div>
-        <div class="skill">☁️ AWS / Vercel / Netlify</div>
+        <div class="skill">🎨 CSS / HTML</div>
+        <div class="skill">☁️ Bluehost / Vercel / Netlify</div>
         <div class="skill">📈 Lighthouse / Web Vitals</div>
       </div>
     </section>
@@ -194,7 +194,7 @@
           <h3>Project Three</h3>
           <p>Micro-site generator with SEO-friendly routing.</p>
           <div class="meta">
-            <span class="chip">Next.js</span><span class="chip">SEO</span><span class="chip">SSR</span>
+            <span class="chip">WordPress</span><span class="chip">SEO</span><span class="chip">SSR</span>
           </div>
           <p><a href="#">Live</a> · <a href="#">Code</a></p>
         </article>
@@ -279,5 +279,6 @@
   </script>
 </body>
 </html>
+
 
 
