--- a/index.html
+++ b/index.html
@@ -206,14 +206,14 @@
       <h2>Experience</h2>
       <div class="card timeline">
         <div class="tl-item">
-          <h3>Senior Frontend Engineer · Acme Corp</h3>
-          <div class="when">2023 — Present · Remote</div>
+          <h3>Wordpress Developer· Vyuhgenics</h3>
+          <div class="when">2024 — Present · hybrid</div>
           <p>Led the design system migration, improved core web vitals by 28%, and mentored 4 engineers.</p>
         </div>
         <div class="tl-item">
-          <h3>Frontend Developer · Pixel Labs</h3>
-          <div class="when">2021 — 2023 · Bengaluru</div>
-          <p>Built a marketing site generator powering 50+ product pages with MDX and Next.js.</p>
+          <h3>Quality Control Engineer · TOYOTETSU INDIA AUTO PARTS PRIVATE LIMITED</h3>
+          <div class="when">2023 — 2024 · Bengaluru</div>
+          <p>Performed quality inspection and ensured adherence to automotive manufacturing standards</p>
         </div>
       </div>
     </section>
@@ -279,6 +279,7 @@
   </script>
 </body>
 </html>
+
 
 
 
